# tak-puzzle-finder

./: Cargo.toml
src/: export.rs  followups.rs  gaelet.rs  main.rs
src/tests/: mod.rs
