[package]
name = "puzzle-finder"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
chrono = { version = "0.4" }
tiltak = { git = "https://github.com/MortenLohne/tiltak" }
topaz-tak = { git = "https://github.com/MortenLohne/topaz-tak" }
board-game-traits = "0.3.0"
pgn-traits = "0.4.0"
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
rayon = "1.7.0"
