[package]
name = "puzzle-finder"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1

[dependencies]
chrono = { version = "0.4" }
tiltak = { git = "https://github.com/MortenLohne/tiltak" }
topaz-tak = { git = "https://github.com/MortenLohne/topaz-tak" }
board-game-traits = "0.4.0"
pgn-traits = "0.5.0"
rand = "0.9.1"
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
serde_rusqlite = "0.39.0"
rayon = "1.7.0"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.39", features = ["derive"] }
